# rbcrews

./: .env.example  .gitignore  CONVENTIONS.md  README.md  app.py  azure_llms.py  crew.py  frontend.py  pdf.py  pyproject.toml
config/: agents.yaml  tasks.yaml
static/css/: style.css
static/js/: main.js
templates/: frontend.html
