[project]
name = "rbcrew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "crewai>=0.102.0",
    "langchain-community>=0.3.18",
    "langchain-openai>=0.3.6",
    "markdown>=3.7",
    "nest-asyncio>=1.6.0",
    "openai>=1.63.2",
    "pymupdf>=1.25.3",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]
